components/autofill/ios/browser/autofill_agent.mm
@@ -103,7 +103,8 @@ void GetFormAndField(autofill::FormData* form,
 // was extracted.
 // Calls |completionHandler| with NO if the forms could not be extracted.
 // |completionHandler| cannot be nil.
-- (void)fetchFormsWithName:(const base::string16&)formName
+- (void)fetchFormsFiltered:(BOOL)filtered
+                      withName:(const base::string16&)formName
     minimumRequiredFieldsCount:(NSUInteger)requiredFieldsCount
                        pageURL:(const GURL&)pageURL
              completionHandler:(FetchFormsCompletionHandler)completionHandler;
@@ -114,6 +115,7 @@ void GetFormAndField(autofill::FormData* form,
 // Returns a BOOL indicating the success value and the vector of form data.
 - (BOOL)getExtractedFormsData:(FormDataVector*)formsData
                      fromJSON:(NSString*)formJSON
+                     filtered:(BOOL)filtered
                      formName:(const base::string16&)formName
                       pageURL:(const GURL&)pageURL;
 
@@ -308,7 +310,8 @@ void GetFormAndField(autofill::FormData* form,
   autofill::KeyboardAccessoryMetricsLogger::OnFormSubmitted();
 }
 
-- (void)fetchFormsWithName:(const base::string16&)formName
+- (void)fetchFormsFiltered:(BOOL)filtered
+                      withName:(const base::string16&)formName
     minimumRequiredFieldsCount:(NSUInteger)requiredFieldsCount
                        pageURL:(const GURL&)pageURL
              completionHandler:(FetchFormsCompletionHandler)completionHandler {
@@ -336,6 +339,7 @@ void GetFormAndField(autofill::FormData* form,
                                BOOL success =
                                    [weakSelf getExtractedFormsData:&formData
                                                           fromJSON:formJSON
+                                                          filtered:filtered
                                                           formName:formNameCopy
                                                            pageURL:pageURLCopy];
                                completionHandler(success, formData);
@@ -344,6 +348,7 @@ void GetFormAndField(autofill::FormData* form,
 
 - (BOOL)getExtractedFormsData:(FormDataVector*)formsData
                      fromJSON:(NSString*)formJSON
+                     filtered:(BOOL)filtered
                      formName:(const base::string16&)formName
                       pageURL:(const GURL&)pageURL {
   DCHECK(formsData);
@@ -381,7 +386,7 @@ void GetFormAndField(autofill::FormData* form,
     autofill::FormData form;
     if (!formData->GetString("name", &form.name))
       return NO;
-    if (!formName.empty() && formName != form.name)
+    if (filtered == YES && formName != form.name)
       continue;
 
     // Origin is mandatory.
@@ -551,7 +556,8 @@ void GetFormAndField(autofill::FormData* form,
   // Re-extract the active form and field only. All forms with at least one
   // input element are considered because key/value suggestions are offered
   // even on short forms.
-  [self fetchFormsWithName:base::SysNSStringToUTF16(formName)
+  [self fetchFormsFiltered:YES
+                        withName:base::SysNSStringToUTF16(formName)
       minimumRequiredFieldsCount:1
                          pageURL:pageURL
                completionHandler:completionHandler];
@@ -643,7 +649,8 @@ void GetFormAndField(autofill::FormData* form,
   // password form data if the page has changed. In most cases this code wins
   // the race.
   // TODO(crbug.com/418827): Fix this by passing in more data from the JS side.
-  [self fetchFormsWithName:base::UTF8ToUTF16(formName)
+  [self fetchFormsFiltered:YES
+                        withName:base::UTF8ToUTF16(formName)
       minimumRequiredFieldsCount:1
                          pageURL:pageURL
                completionHandler:completionHandler];
@@ -695,7 +702,8 @@ void GetFormAndField(autofill::FormData* form,
   // Because of the cost of communicating with the server, only forms that have
   // enough forms to make them likely candidates for profile completion are
   // extracted.
-  [self fetchFormsWithName:base::string16()
+  [self fetchFormsFiltered:NO
+                        withName:base::string16()
       minimumRequiredFieldsCount:autofill::kRequiredFieldsForPredictionRoutines
                          pageURL:pageURL
                completionHandler:completionHandler];
@@ -752,7 +760,8 @@ void GetFormAndField(autofill::FormData* form,
 
   // Re-extract the active form and field only. There is no minimum field
   // requirement because key/value suggestions are offered event on short forms.
-  [self fetchFormsWithName:base::UTF8ToUTF16(formName)
+  [self fetchFormsFiltered:YES
+                        withName:base::UTF8ToUTF16(formName)
       minimumRequiredFieldsCount:1
                          pageURL:pageURL
                completionHandler:completionHandler];
